plugins {
    id 'org.springframework.boot' version '2.7.3'
    id 'io.spring.dependency-management' version '1.0.12.RELEASE'
    id 'java'
//    id 'org.springframework.experimental.aot' version '0.11.3'
}

group = 'ir.darkdeveloper'
version = '0.0.2'
sourceCompatibility = JavaVersion.VERSION_18


configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

jar.into('static') {
    from('src/main')
}

repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/release' }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-configuration-processor'
    implementation 'io.jsonwebtoken:jjwt:0.9.1'
    implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.4'
    implementation 'org.springframework.security:spring-security-oauth2-jose:5.7.2'
    implementation 'org.springframework.security:spring-security-oauth2-client:5.7.2'
    implementation "org.springframework.boot:spring-boot-starter-mail"
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.3'
    implementation 'org.apache.poi:poi:5.2.2'
    implementation 'org.apache.poi:poi-ooxml:5.2.2'

    implementation 'org.mapstruct:mapstruct:1.5.2.Final'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.2.Final'
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
    implementation 'org.projectlombok:lombok:1.18.24'
    annotationProcessor 'org.projectlombok:lombok:1.18.24'


    // won't let native image to compile
    //developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'org.postgresql:postgresql:42.3.6'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

    testImplementation 'org.testcontainers:postgresql:1.17.3'
    testImplementation 'org.testcontainers:testcontainers:1.17.3'
    testImplementation 'org.testcontainers:junit-jupiter:1.17.3'

    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc:2.0.6.RELEASE'
    testImplementation 'com.h2database:h2:2.1.214'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test:5.7.2'

//    constraints {
//        implementation("org.apache.logging.log4j:log4j-core") {
//            version {
//                strictly("[2.17.2, 3[")
//                prefer("2.17.3")
//            }
//        }
//    }
}

test {
    useJUnitPlatform()
}

//bootBuildImage {
//    builder = 'paketobuildpacks/builder:tiny'
//    environment = ['BP_NATIVE_IMAGE': 'true']
//}